--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
         CAMCAM ORDER
     </title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <script async src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"/>
     <link rel="icon" href="/images/camcam-logo.png" sizes="32x32">
 </head>
@@ -67,7 +66,8 @@
         </button>
     </div>
 </div>
-<script>
+<script async defer src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+<script async>
     const {createApp, computed} = Vue
 
     createApp({
