--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"/>
-    <link rel="icon" href="/images/camcam-logo.png" sizes="32x32">
+    <link rel="icon" href="./images/camcam-logo.png" sizes="32x32">
 </head>
 <body class="bg-orange-50">
 <div id="app" class="max-w-md mx-auto bg-white rounded-3xl shadow-lg overflow-hidden mt-10">
