Cam cam order logic

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         </button>
     </div>
 </div>
-<script async defer src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+<script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
 <script async>
     const {createApp, computed} = Vue
 
