Cam cam order logic

--- a/index.html
+++ b/index.html
@@ -174,8 +174,8 @@
                         }
                     }
                     // Định dạng tin nhắn
-                    const message = `🚀 *ĐƠN MỚI ${date}*\n`
-                        + `😽 *Khách:* ${customerName}\n`
+                    const message = `🚀 ĐƠN MỚI ${date}\n`
+                        + `😽 Khách: ${customerName}\n`
                         + `———————————\n`
                         + items.map(item => `🛒 ${item}`).join("\n") + `\n`
                         + `———————————\n`
