--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                        class="block w-full pb-1 text-sm font-medium text-gray-500 transition-all duration-200 ease-in-out group-focus-within:text-orange-400">Cho
                     Cam xin tên:</label>
                 <input id="name" v-model="customerName" type="text"
-                       class="peer h-10 w-full rounded-md bg-gray-50 px-4 font-thin outline-none drop-shadow-sm transition-all duration-200 ease-in-out focus:bg-white focus:ring-2 focus:ring-orange-400"
+                       class="peer h-10 w-full rounded-md bg-gray-50 px-4 outline-none drop-shadow-sm transition-all duration-200 ease-in-out focus:bg-white focus:ring-2 focus:ring-orange-400"
                        placeholder="VD: CAM CAM NÈ"/>
             </div>
         </div>
@@ -66,9 +66,9 @@
     <div class="px-4 py-4 bg-gray-100 flex items-center justify-between">
         <span class="text-2xl font-semibold">{{formatMoney(total)}}</span>
         <button class="bg-gray-500 text-white rounded-full px-6 py-2 flex items-center"
-                :class="{'bg-orange-500': total>0}" @click="sendOrder()">
+                :class="{'bg-orange-500': total>0 && loading === false}" @click="sendOrder()">
             <i class="fas fa-paper-plane mr-2"></i>
-            Đặt đơn
+            {{loading ? 'Đang gửi...' : 'Đặt đơn'}}
         </button>
     </div>
 </div>
@@ -107,7 +107,7 @@
             },
             notify(type, message) {
                 this.$toast.open({
-                    message: message || "Đặt đơn thành công! Chờ Cam check đơn nhak! 😽",
+                    message: message || "Đặt đơn thành công! Chờ Cam chút nhak! 😽",
                     type,
                     position: 'top'
                 });
@@ -156,12 +156,13 @@
                 this.feeShip = 0
                 this.discount = 0
                 this.customerName = ''
+                this.loading = false
             },
             sendOrder() {
                 if (this.customerName === '') {
-                    this.notify('error', 'Vui lòng nhập tên để Cam biết khách nhak!😽')
+                    this.notify('error', 'Nhập tên để Cam biết ai nhak!😽')
                 } else {
-                    this.resetData()
+                    this.loading = true
                     const CHAT_ID = '-4747095084';
                     const BOT_TOKEN = '7984088170:AAGcywp566fyAL4GOEyIL7dYtxiia3ZoZUg';
 
@@ -192,6 +193,7 @@
                     })
                         .then(response => response.json())
                         .then(data => {
+                            this.resetData();
                             this.notify('success', '')
                             console.log(data)
                         })
@@ -246,7 +248,8 @@
                 subTotal: 0,
                 feeShip: 0,
                 discount: 0,
-                customerName: ''
+                customerName: '',
+                loading: false
             }
         }
     })
