--- a/index.html
+++ b/index.html
@@ -273,6 +273,13 @@
                         price: 5000,
                         quantity: 0,
                         recommended: false
+                    },
+                    10: {
+                        name: 'Tắc (1 trái)',
+                        imageUrl: './images/tac.png',
+                        price: 1000,
+                        quantity: 0,
+                        recommended: false
                     }
                 },
                 total: 0,
